@@ -5,16 +5,23 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 35
 
     defaultConfig {
         applicationId 'com.errepar.mislibros'
         minSdkVersion 21
-        targetSdkVersion 32
-        versionCode 12
-        versionName "1.6"
+        targetSdkVersion 35
+        versionCode 28
+        versionName "1.21"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    tasks.withType(JavaCompile).configureEach{
+        options.fork = true
+        options.forkOptions.jvmArgs +=[
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
     }
 
     lintOptions {
@@ -35,30 +42,39 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.example.mislibros'
 }
 
 dependencies {
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.play:core:1.10.0'
+    implementation 'com.google.android.play:review:2.0.1'
+    implementation 'com.google.android.play:app-update:2.1.0'
+
+
+    // For Kotlin users also add the Kotlin extensions library for Play In-App Update:
+    //implementation 'com.google.android.play:app-update-ktx:2.1.0'
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     implementation 'com.google.code.gson:gson:2.8.9'
-    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+    //implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+    implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
     implementation 'com.github.kiranbjm:xlsxparser:1.01'
+
     testImplementation 'junit:junit:4.12'
-    implementation 'androidx.core:core:1.3.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.core:core:1.13.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.fragment:fragment:1.3.4'
     //Autenticacióna
     implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
@@ -90,7 +106,7 @@ dependencies {
 
     implementation 'com.itextpdf:itextg:5.5.+'
     implementation files('libs/xmlworker-5.4.1.jar')
-    implementation 'com.github.bmelnychuk:atv:1.2.+'
+    implementation 'com.github.bmelnychuk:atv:1.2.9'
     implementation 'com.github.johnkil.print:print:1.2.2'
 
     implementation 'com.google.firebase:firebase-crashlytics'
@@ -99,4 +115,5 @@ dependencies {
     implementation files('libs/activation.jar')
     implementation files('libs/additionnal.jar')
     implementation files('libs/mail.jar')
+
 }
